--- a/app/app.css
+++ b/app/app.css
@@ -35,3 +35,16 @@
 .table-body:nth-child(odd) {
   background-color: #e7fff6
 }
+
+#vertical-para {
+    transform: rotate(270deg);
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+}
+
+#para {
+    font-family: Arial, Helvetica, sans-serif	;
+    font-size: 20px;
+}
